--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,37 @@
-<h1>user info</h1>
-<h1>new book</h1>
-<h1>users</h1>
+<div class = "container">
+  <div class = "row">
+
+    <div class = "col=5">
+      <h1>user info</h1>
+        <%= @user.name%>
+        <%= @user.introduction%>
+      <h1>new book</h1>
+        <%= form_with model:@book,local:true do |f|%>
+        <p>Title</p>
+        <%= f.text_field :title%>
+        <p>Opinion</p>
+        <%= f.text_area :body%>
+        <%= f.submit "Create Book"%>
+        <%end%>
+    </div>
+
+    <div class = "col=7">
+      <h1>Users</h1>
+      <table class = "table">
+        <tr>
+          <th>image</th>
+          <th>name</th>
+          <th></th>
+        </tr>
+        <% @users.each do |user|%>
+        <tr>
+          <td><%= user.profile_image %></td>
+          <td><%= user.name %></td>
+          <td><%= link_to "Show",user_path(user.id)%></td>
+        </tr>
+        <%end%>
+      </table>
+    </div>
+
+  </div>
+</div>
