--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,9 +18,13 @@
     <div class = "col=7">
       <h1>Book detail</h1>
       <table class = "table">
+        <tr>
         <td><%= link_to @user.name,user_path(@user)%></td>
         <td><%= link_to @chose_book.title,book_path(@chose_book)%></td>
         <td><%= @chose_book.body%></td>
+        <td><%= link_to "Edit",edit_book_path(@chose_book)%></td>
+        <td><%= link_to "Destroy",book_path(@chose_book),method: :delete%></td>
+        </tr>
       </table>
     </div>
 
