--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,11 +1,11 @@
 
 
-<h1>welcome to Bookers!!</h1>
-<p>in Bookers,<br>
+<h1 class="text-center">welcome to Bookers!!</h1>
+<p class="text-center">in Bookers,<br>
 you can share and exchange your opinions, inpressions, and emotions<br>
 about various books !</p>
 
-<%= link_to "Log in",new_user_session_path%>
-<%= link_to "Sign Up",new_user_registration_path%>
+<%= link_to "Log in",new_user_session_path, class: "btn"%>
+<%= link_to "Sign Up",new_user_registration_path, class: "btn"%>
 
 <p>CopyRight infratop.inc</p>
