[Update]レイアウトの整頓

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,5 @@
-<h1>about page</h1>
+<div class="container">
+  <div class="row mx-auto mt-5">
+    <h1 class="mx-auto">Welcome to <span class="fas fa-book">Bookers!!</span></h1>
+  </div>
+</div>S
