--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,11 +1,12 @@
-
-
-<h1 class="text-center">welcome to Bookers!!</h1>
-<p class="text-center">in Bookers,<br>
-you can share and exchange your opinions, inpressions, and emotions<br>
-about various books !</p>
-
-<%= link_to "Log in",new_user_session_path, class: "btn"%>
-<%= link_to "Sign Up",new_user_registration_path, class: "btn"%>
-
-<p>CopyRight infratop.inc</p>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto">
+      <h1 class="mt-5">Welcome to  <span class="fas fa-book">Bookers!!</span></h1>
+      <p>in  <span class="fas fa-book">Bookers</span>,<br>
+      you can share and exchange your opinions, inpressions, and emotions<br>
+      about various books !</p>
+      <%= link_to "Log in",new_user_session_path, class:"row btn btn-info btn-block mt-4"%>
+      <%= link_to "Sign Up",new_user_registration_path, class:"row btn btn-success btn-block"%>
+    </div>
+  </div>
+</div>
