--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,23 @@
-<%= form_with model:@book,local:true do |f|%>
-<label for="title">Title</label>
-<%= f.text_field :title%>
-<label for="body">Opinion</label>
-<%= f.text_area :body%>
-<%= f.submit "Update Book"%>
-<%end%>
+<div class="container mt-4">
+    <div class="row">
+        <div class="mx-auto">
+            <h1>Editing Book</h1>
+            <%= form_with model:@book,local:true do |f|%>
+            <div class="form-group">
+                <label for="title">Title</label><br>
+                <%= f.text_field :title%>
+            </div>
+            <div class="form-group">
+                <label for="body">Opinion</label><br>
+                <%= f.text_area :body%>
+            </div>
+            <%= f.submit "Update Book",class:"btn btn-success"%>
+            <%end%>
+            <div class="row mt-4">
+                <%= link_to "Show",book_path(@book)%>
+                <p>|</p>
+                <%= link_to "Back",books_path%>
+            </div>
+        </div>
+    </div>
+</div>
