--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,4 @@
-<div class = "container mt-3">
-  <div class = "row">
+
 
     <%= render "users/left_bar",user:@user,book:@book %>
 
@@ -10,8 +9,10 @@
         <td><%= link_to @user.name,user_path(@user)%></td>
         <td><%= link_to @chose_book.title,book_path(@chose_book)%></td>
         <td><%= @chose_book.body%></td>
+        <% if @user.id == current_user.id %>
         <td><%= link_to "Edit",edit_book_path(@chose_book)%></td>
         <td><%= link_to "Destroy",book_path(@chose_book),method: :delete%></td>
+        <%end%>
         </tr>
       </table>
     </div>
