--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,22 @@
-<%= form_with model:@user,local:true do |f|%>
-<h2>User info</h2>
-<label for="name">Name</label>
-<%= f.text_field :name%>
-<label for="image">Image</label>
-<label for="introduction">Introduction</label>
-<%= f.text_area :introduction%>
-<%= f.submit "Update User"%>
-<%end%>
+<div class="container">
+<div class="row">
+  <div class="mx-auto">
+  <%= form_with model:@user,local:true do |f|%>
+  <h2 class="mt-3">User info</h2>
+  <div class="form-group">
+    <label for="name">Name</label><br>
+    <%= f.text_field :name%>
+  </div>
+  <div class="form-group">
+    <label for="image">Image</label><br>
+    <%= f.attachment_field :profile_image%>
+  </div>
+  <div class="form-group">
+    <label for="introduction">Introduction</label><br>
+    <%= f.text_area :introduction%>
+  </div>
+  <%= f.submit "Update User" %>
+  <%end%>
+  </div>
+</div>
+</div>
