--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,33 +13,35 @@
   <body>
 
     <header class="bg-dark">
-     <div class="container">
-       <nav class="row d-flex navbar navbar-expand-lg navbar-dark">
-         <a class="navbar-brand " href="/">Bookers</a>
-         <div class="ml-auto">
-          <% if user_signed_in? %>
-          <ul class="navbar-nav">
-            <%= link_to "Home",user_path(current_user), class: "text-light nav-link fas fa-home"%>
-            <%= link_to "Users",users_path, class: "text-light nav-link fas fa-users"%>
-            <%= link_to "Books",books_path, class: "text-light nav-link fas fa-book-open"%>
-            <%= link_to "logout",destroy_user_session_path,method: :delete, class: "text-light nav-link fas fa-sign-out-alt"%>
-          </ul>
-          <%else%>
-          <ul class="navbar-nav">
-            <%= link_to "Home",root_path, class: "text-light nav-link fas fa-home"%>
-            <%= link_to "About",homes_about_path, class: "text-light nav-link fas fa-link"%>
-            <%= link_to "sign up",new_user_registration_path, class: "text-light nav-link fas fa-user-plus"%>
-            <%= link_to "login",new_user_session_path, class: "text-light nav-link fas fa-sign-in-alt"%>
-          </ul>
-          <%end%>
+      <div class="container">
+       <nav class="d-flex navbar navbar-expand-lg navbar-dark">
+           <a class="navbar-brand " href="/">Bookers</a>
+           <div class="ml-auto">
+            <% if user_signed_in? %>
+            <ul class="navbar-nav">
+              <%= link_to "Home",user_path(current_user), class: "text-light nav-link fas fa-home"%>
+              <%= link_to "Users",users_path, class: "text-light nav-link fas fa-users"%>
+              <%= link_to "Books",books_path, class: "text-light nav-link fas fa-book-open"%>
+              <%= link_to "logout",destroy_user_session_path,method: :delete, class: "text-light nav-link fas fa-sign-out-alt"%>
+            </ul>
+            <%else%>
+            <ul class="navbar-nav">
+              <%= link_to "Home",root_path, class: "text-light nav-link fas fa-home"%>
+              <%= link_to "About",home_about_path, class: "text-light nav-link fas fa-link"%>
+              <%= link_to "sign up",new_user_registration_path, class: "text-light nav-link fas fa-user-plus"%>
+              <%= link_to "login",new_user_session_path, class: "text-light nav-link fas fa-sign-in-alt"%>
+            </ul>
+            <%end%>
+           </div>
          </div>
        </nav>
-     </div>
     </header>
+
+        <%= notice%>
 
     <%= yield %>
 
-    <footer class="mt-5">
+    <footer class=" container mt-5">
           <p class="text-center">CopyRight infratop.inc</p>
     </footer>
 
