--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,27 @@
 
 
-     <%= render "users/left_bar",user:@user,book:@book %>
-
-    <div class = "col-8">
-      <h1>Users</h1>
-      <table class = "table">
-        <tr>
-          <th>image</th>
-          <th>name</th>
-          <th></th>
-        </tr>
-        <% @users.each do |user|%>
-        <tr>
-          <td><%= attachment_image_tag user,:profile_image,size:"25x25",fallback:"image/person.jpeg"%></td>
-          <td><%= user.name %></td>
-          <td><%= link_to "Show",user_path(user.id)%></td>
-        </tr>
-        <%end%>
-      </table>
+<div class = "container">
+    <%= render "layouts/errors",book:@book %>
+    <div class = "row">
+        <div class = "col-md-3">
+            <%= render "users/left_bar",user:@user,book:@book %>
+        </div>
+        <div class = "col-md-8 offset-md-1">
+            <h1>Users</h1>
+            <table class = "table">
+                <tr>
+                <th>image</th>
+                <th>name</th>
+                <th></th>
+                </tr>
+                <% @users.each do |user|%>
+                <tr>
+                <td><%= attachment_image_tag user,:profile_image,size:"25x25",fallback:"image/person.jpeg"%></td>
+                <td><%= user.name %></td>
+                <td><%= link_to "Show",user_path(user.id)%></td>
+                </tr>
+                <%end%>
+            </table>
+        </div>
     </div>
-
-  </div>
 </div>
