--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,34 @@
 
 
-     <%= render "users/left_bar",user:@user,book:@book %>
-
-    <div class = "col-8">
-      <h1>books</h1>
-      <table class = "table">
-        <tr>
-          <th>Title</th>
-          <th>Opinion</th>
-        </tr>
-        <% @books.each do |book|%>
-        <tr>
-          <td><%= link_to book.title,book_path(book.id)%></td>
-          <td><%=book.body%></td>
-        </tr>
-        <%end%>
-      </table>
+<div class = "container">
+    <%= render "layouts/errors",book:@book%>
+    <div class = "row">
+        <div class = "col-md-3">
+            <%= render "users/left_bar",user:@user,book:@book %>
+        </div>
+        <div class = "col-md-8 offset-md-1">
+            <h1>books</h1>
+            <table class = "table">
+                <tr>
+                    <th></th>
+                    <th>Title</th>
+                    <th>Opinion</th>
+                </tr>
+                <% @books.each do |book|%>
+                <tr>
+                    <td>
+                        <%= link_to user_path(@user) do%>
+                            <%= attachment_image_tag @user,:profile_image,size:"25x25",fallback:"image/person.jpeg"%>
+                        <%end%>
+                    </td>
+                    <td>
+                        <%= link_to book.title,book_path(book)%>
+                    </td>
+                    <td><%=book.body%></td>
+                </tr>
+                <%end%>
+            </table>
+        </div>
     </div>
-
-  </div>
 </div>
 
