--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,6 +25,9 @@
                         <%= link_to book.title,book_path(book)%>
                     </td>
                     <td><%=book.body%></td>
+                    <td>
+                    <p>コメント数：<%= book.book_comments.count%></p>
+                  </td>
                 </tr>
                 <%end%>
             </table>
