--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     </header>
 
     <div class="row">
-  <div class="col-xs-6 col-xs-offset-3 text-center" style="margin-top: 25px;">
+  <div class="text-center mx-auto" style="margin-top: 25px;">
     <% if user_signed_in? %>
       <%= form_with url:search_path, method: :get, local: true do |f| %>
         <%= f.text_field 'search[value]' %>
