--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -14,7 +14,7 @@
         <tbody>
             <tr>
                 <th>
-                    <%= attachment_image_tag(user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size:'40x40') %>
+                    <%= attachment_image_tag(user, :profile_image, :fill, 40, 40, fallback: "image/person.jpeg", size:'40x40') %>
                 </th>
                 <th>
                     <%= user.name %>
@@ -39,7 +39,7 @@
         <tbody>
             <tr>
                 <th>
-                    <%= attachment_image_tag(book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size:'40x40') %>
+                    <%= attachment_image_tag(book.user, :profile_image, :fill, 40, 40, fallback: "image/person.jpeg", size:'40x40') %>
                 </th>
                 <th>
                     <%= book.title %>
